--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,8 +9,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ${EMAIL_USERNAME}
-    password: ${EMAIL_PASSWORD}
+    username: ${email.username}
+    password: ${email.password}
     properties:
       mail:
         smtp:
@@ -28,9 +28,9 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://wantit-mysql.c3q28yoac28n.ap-northeast-2.rds.amazonaws.com:3306/${DATABASE_NAME}
-    username: ${MYSQL_USERNAME}
-    password: ${MYSQL_PASSWORD}
+    url: jdbc:mysql://wantit-mysql.c3q28yoac28n.ap-northeast-2.rds.amazonaws.com:3306/${database.name}
+    username: ${mysql.username}
+    password: ${mysql.password}
 
   data:
     redis:
@@ -39,21 +39,11 @@ spring:
 
 jwt:
   secret:
-    key: ${JWT_SECRET_KEY}
+    key: ${jwt.secret.key}
 
 kakao:
-  grant_type: ${GRANT_TYPE}
-  client_id: ${CLIENT_ID}
-  redirect_uri: ${REDIRECT_URI}
-
-cloud:
-  aws:
-    s3:
-      bucket: wantit-bucket
-    stack.auto: false
-    region.static: ap-northeast-2
-    credentials:
-      accessKey: ${AWS_ACCESS_KEY}
-      secretKey: ${AWS_SECRET_KEY}
+  grant_type: ${grant_type}
+  client_id: ${client_id}
+  redirect_uri: ${redirect_uri}
 
 
