:wrench: chore : Firebase 디렉토리 수정

--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Make FCM SDK
         run: |
-          cd ./src/main/resources/firebase
+          cd ./src/main/resources
           touch ./firebase-adminSDK.json
           echo "${{ secrets.ADMIN_SDK }}" >> ./firebase-adminSDK.json
         shell: bash
