--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 **/resources/firebase/**
+**/resources/application.yml
 
 ### STS ###
 .apt_generated
