:bug: Fix : 플러그인 수정

--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -30,6 +30,7 @@ jobs:
           distribution: 'corretto'
 
       - name: Setting yml file
+        uses: microsoft/variable-substitution@v1
         run: |
           cd ./src/main/resources
           touch ./application.yml
